# mmengine

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: deploy.yml  lint.yml  pr_stage_test.yml
mmengine/: version.py
mmengine/cli/: __init__.py  __main__.py  command.py
mmengine/cli/tasks/: __init__.py  browse_dataset.py
mmengine/config/: __init__.py
mmengine/hub/: hub.py
mmengine/infer/: infer.py
mmengine/registry/: registry.py
mmengine/runner/: checkpoint.py
mmengine/structures/: pixel_data.py
mmengine/utils/dl_utils/: hub.py
requirements/: runtime.txt  runtime_lite.txt  tests.txt
tests/test_runner/: test_checkpoint.py
